--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -2,6 +2,7 @@ body{
     margin: 0;
 }
 .navbar {
+    position: sticky;
     width: 100%;
     display: flex;
     justify-content: space-between;
