--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -8,8 +8,8 @@ body{
     justify-content: space-between;
     padding: 20px;
     color: white;
-    background-color: rgba(0, 0, 0, 0.8);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    background-color: rgb(8, 8, 8);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.5);
     align-items: center; 
     border-bottom: 1px solid rgba(255, 255, 255, 0.1); 
 }
@@ -28,8 +28,9 @@ body{
 
 .navbar-left img {
     cursor: pointer;
-    width: 50px; 
+    width: auto; 
     height: 50px; 
+    margin-left: 50px;
 }
 
 
