--- a/src/styles/featuredSection.css
+++ b/src/styles/featuredSection.css
@@ -7,10 +7,10 @@
     position: relative;
     margin-right: 20px;
     margin-left: 20px;
-    margin-top: 15px;
+    margin-top: 20px;
     border-radius: 40px;
-    height: 400px;
-    overflow: hidden;
+    height: 550px;
+
     background: 
         linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), 
         url('./t-shirt.png');
@@ -19,8 +19,21 @@
     background-size: cover;
     color: white;
 }
-
 .text-section {
-
+    width: 100%;
+    height: 100%;
+}
+.text-section button {
+    background-color: rgb(16, 16, 150);
+    width: 200px;
+    height: 85px;
+    border-radius: 15px;
+    color: white;
+    border: none;
+    margin-top: 30vh;
+    margin-left: 10vw;
+    font-size: 3dvh;
+    
+    box-shadow: 0px 0px 10px 5px rgba(255,255,255,0.4);
 }
 
