--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -3,7 +3,9 @@ body{
 }
 .navbar {
     position: sticky;
-    width: 100%;
+    top: 0;
+    z-index: 5;
+    
     display: flex;
     justify-content: space-between;
     padding: 20px;
