--- a/src/styles/featuredItemsSection.css
+++ b/src/styles/featuredItemsSection.css
@@ -1,22 +1,42 @@
-
+.featured-products-heading {
+    text-align: center;
+    margin: 6vh 6vw;
+}
 
 .product-list {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 30vh;
   }
   
   .product-item {
-    border: 1px solid #ddd;
-    padding: 20px;
-    margin: 10px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    max-width: 300px;
+    border: none;
+    border-radius: 20px;
+    padding: 15px;
+    margin: 25px;
+    box-shadow: 2px 2px 10px rgba(196, 196, 196, 0.1);
+    background-color: rgb(160, 152, 187);
+    width: 220px;
+    height: 300px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   
   .product-item img {
-    max-width: 100%;
-    margin-bottom: 15px;
+    
   }
+
+.product-image-container {
+    flex: 7;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.product-info-container {
+    flex: 3;  
+}
   
