--- a/src/styles/featuredItemsSection.css
+++ b/src/styles/featuredItemsSection.css
@@ -16,7 +16,7 @@
     padding: 15px;
     margin: 25px;
     box-shadow: 2px 2px 10px rgba(196, 196, 196, 0.1);
-    background-color: rgb(160, 152, 187);
+    background-color: rgb(0, 0, 0);
     width: 220px;
     height: 300px;
     text-align: center;
@@ -24,12 +24,11 @@
     flex-direction: column;
     justify-content: space-between;
   }
-  
-  .product-item img {
-    
-  }
+
 
 .product-image-container {
+    border-radius: 10px 10px 0 0;
+    background-color: white;
     flex: 7;  
     display: flex;
     align-items: center;
@@ -37,6 +36,9 @@
 }
 
 .product-info-container {
-    flex: 3;  
+    border-radius: 0 0 10px 10px;
+    background-color: rgb(153, 144, 172);
+    height: 30%;  
+    padding: 5px;
 }
   
