--- a/src/styles/featuredSection.css
+++ b/src/styles/featuredSection.css
@@ -22,7 +22,16 @@
 .text-section {
     width: 100%;
     height: 100%;
+    margin-left: 200px;
+    margin-top: 100px;
 }
+.text-section p:first-child {
+    font-size: 50px;
+}
+.text-section p:last-of-type {
+    font-size: 30px;
+}
+
 .text-section button {
     background-color: rgb(16, 16, 150);
     width: 200px;
@@ -30,8 +39,8 @@
     border-radius: 15px;
     color: white;
     border: none;
-    margin-top: 30vh;
-    margin-left: 10vw;
+    margin-top: 10vh;
+    
     font-size: 3dvh;
     
     box-shadow: 0px 0px 10px 5px rgba(255,255,255,0.4);
