--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -69,3 +69,20 @@ body{
     transform: translateY(-50%);
     right: -10px; 
 }
+
+.icon-badge-container {
+    position: relative;
+    display: inline-block;
+}
+
+.cart-badge {
+    position: absolute;
+    top: -5px;
+    right: 10px;
+    background-color: rgb(180, 0, 0);
+    color: white;
+    border-radius: 50%; 
+    padding: 3px 9px;
+    font-size: 18px;
+    font-weight: bold;
+}
