--- a/src/styles/featuredItemsSection.css
+++ b/src/styles/featuredItemsSection.css
@@ -8,14 +8,13 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 30vh;
-  }
+}
   
-  .product-item {
+.product-item {
     border: none;
     border-radius: 20px;
     padding: 15px;
     margin: 25px;
-    box-shadow: 2px 2px 10px rgba(196, 196, 196, 0.1);
     background-color: rgb(0, 0, 0);
     width: 220px;
     height: 300px;
@@ -23,8 +22,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-  }
+    transition: box-shadow 0.3s, transform 0.3s;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2); 
+}
 
+.product-item:hover {
+    box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.5); 
+    transform: scale(1.02); 
+} 
 
 .product-image-container {
     border-radius: 10px 10px 0 0;
