--- a/src/styles/product-card.css
+++ b/src/styles/product-card.css
@@ -13,18 +13,27 @@
 }
 
 .product-card-image-container {
+    display: flex;
+    flex-direction: column; 
+    height: 70%;
     position: relative;
     text-align: center;
+    width: auto;
+    padding: 15%;
+    justify-content: space-between;
 }
 
 .product-card img {
-    width: 100%;
-    max-width: 200px;
-    border-radius: 5px;
-    margin-bottom: 15px;
+    align-self: flex-start;
+    object-fit: contain;
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    margin: auto;
 }
 
 .product-card-details {
+    align-self: flex-end;
     text-align: center;
     margin-top: 10px;
 }
