--- a/src/styles/product-card.css
+++ b/src/styles/product-card.css
@@ -6,6 +6,9 @@
     margin: 15px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .product-card:hover {
@@ -21,6 +24,7 @@
     width: auto;
     padding: 15%;
     justify-content: space-between;
+    align-self: flex-start;
 }
 
 .product-card img {
@@ -39,6 +43,7 @@
 }
 
 .add-to-cart-container {
+    margin-bottom: 7%;
     margin-top: 20px;
     text-align: center;
 }
