--- a/src/styles/store.css
+++ b/src/styles/store.css
@@ -1,10 +1,11 @@
 .store-title {
     text-align: center;
-    font-size: 2em;
+    font-size: 3em;
     margin-top: 20px;
     margin-bottom: 40px;
     color: #333;
     font-weight: 600;
+    margin-top: 5vh;;
 }
 
 .store-container {
