--- a/src/styles/shoppingCart.css
+++ b/src/styles/shoppingCart.css
@@ -90,3 +90,11 @@
     padding: 5px 0px;
 }
 
+.cart-item-icon {
+    width: 50px; 
+    height: auto;
+    object-fit: cover; 
+    border-radius: 4px; 
+    margin-right: 7px; 
+}
+
