--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,8 +1,3 @@
-html, body, #root {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-}
 
 .footer {
     background-color: #111;
@@ -10,7 +5,8 @@ html, body, #root {
     text-align: left;
     padding: 10px 0px;
     margin-top: 15vh;
-  }
+    margin-bottom: 0;
+}
   
   .footer .footer-content {
     display: flex;
