--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -48,6 +48,8 @@
   }
   
   .footer .footer-bottom {
+    display: flex;
+    justify-content: center;
     background-color: #333;
     color: #fff;
     text-align: center;
@@ -73,5 +75,12 @@
   .footer .socials a:hover {
     background-color: #fff;
     color: #111;
+  }
+
+  .fa-github{
+    transition: transform 0.3s ease-in-out;
+  }
+  .fa-github:hover {
+    transform: rotate(360deg) scale(1.2); 
   }
   
